--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "gatsby-demo-simple-auth",
-  "description": "Gatsby demo of simplified authentication flow.",
-  "version": "1.0.0",
-  "author": "Jason Lengstorf <jason@lengstorf.com>",
+  "name": "egghead-gatsby-link",
+  "private": true,
+  "description": "Examples of how to use the Link component in Gatsby.",
+  "version": "0.0.1",
+  "author": "Jason Lengstorf <jason@gatsbyjs.com>",
   "dependencies": {
-    "gatsby": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "prop-types": "^15.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^5.2.1"
+    "gatsby": "^2.0.118",
+    "gatsby-plugin-manifest": "^2.0.17",
+    "gatsby-plugin-offline": "^2.0.23",
+    "gatsby-plugin-react-helmet": "^3.0.6",
+    "prop-types": "^15.7.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-helmet": "^5.2.0"
   },
   "keywords": [
     "gatsby"
@@ -18,8 +21,15 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
     "start": "npm run develop",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "gatsby serve",
+    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jlengstorf/egghead-gatsby-link"
+  },
+  "bugs": {
+    "url": "https://github.com/jlengstorf/egghead-gatsby-link/issues"
   }
 }
